--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-2.yml
@@ -499,3 +499,95 @@ notes:
       \\]
     Back: |
       No.
+- id: 1542310338769
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.2 23a: The table below gives the winning heights for the Olympic pole vault competitions up to the year 2000.
+
+      $$
+        \begin{array}{|c|c|c|c|}
+          \hline
+          \text{Year} & \text{Height (m)} & \text{Year} & \text{Height (m)} \\
+          \hline
+          1896  & 3.30 & 1956 & 4.56 \\
+          1900  & 3.30 & 1960 & 4.70 \\
+          1904  & 3.50 & 1964 & 5.10 \\
+          1908  & 3.71 & 1968 & 5.40 \\
+          1912  & 3.95 & 1972 & 5.64 \\
+          1920  & 4.09 & 1976 & 5.64 \\
+          1924  & 3.95 & 1980 & 5.78 \\
+          1928  & 4.20 & 1984 & 5.75 \\
+          1932  & 4.31 & 1988 & 5.90 \\
+          1936  & 4.35 & 1992 & 5.87 \\
+          1948  & 4.30 & 1996 & 5.92 \\
+          1952  & 4.55 & 2000 & 5.90 \\
+          \hline
+        \end{array}
+      $$
+
+      Make a scatter plot and decide whether a linear model is appropriate.
+    Back: |
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+      import numpy as np
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = np.array((
+        1896,
+        1900,
+        1904,
+        1908,
+        1912,
+        1920,
+        1924,
+        1928,
+        1932,
+        1936,
+        1948,
+        1952,
+        1956,
+        1960,
+        1964,
+        1968,
+        1972,
+        1976,
+        1980,
+        1984,
+        1988,
+        1992,
+        1996,
+        2000,
+      ))
+      y = np.array((
+        3.30,
+        3.30,
+        3.50,
+        3.71,
+        3.95,
+        4.09,
+        3.95,
+        4.20,
+        4.31,
+        4.35,
+        4.30,
+        4.55,
+        4.56,
+        4.70,
+        5.10,
+        5.40,
+        5.64,
+        5.64,
+        5.78,
+        5.75,
+        5.90,
+        5.87,
+        5.92,
+        5.90,
+      ))
+
+      _ = plt.scatter(x, y)
+      ```
+      Linear model is appropriate.
