--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -1,7 +1,7 @@
 defaults:
   deckName: Staging
   modelName: BasicMathJaxAndReverse
-  tags:
+  extraTags:
   - Coursework
   - Coursera
   - DataScience
