--- a/markdown_mathjax_demo.yml
+++ b/markdown_mathjax_demo.yml
@@ -1,7 +1,7 @@
 defaults:
   deckName: Staging
   modelName: BasicMathJax
-  tags:
+  extraTags:
   - Misc
   - MarkdownAndMathJaxDemos
   markdownTabLength: 2
