--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -18,3 +18,11 @@ notes:
       $$
       y = f(x) + 3
       $$
+- id: 1542483083331
+  fields:
+    Front: |
+      CCAC 01.3 01b: Suppose the graph of $f$ is given. Write the equation for the graph obtained from the graph of $f$ by shifting 3 units downward.
+    Back: |
+      $$
+      y = f(x) - 3
+      $$
