--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -26,3 +26,11 @@ notes:
       $$
       y = f(x) - 3
       $$
+- id: 1542483083447
+  fields:
+    Front: |
+      CCAC 01.3 01c: Suppose the graph of $f$ is given. Write the equation for the graph obtained from the graph of $f$ by shifting 3 units to the right.
+    Back: |
+      $$
+      y = f(x - 3)
+      $$
