--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -66,3 +66,11 @@ notes:
       $$
       y = 3f(x)
       $$
+- id: 1542483083950
+  fields:
+    Front: |
+      CCAC 01.3 01h: Suppose the graph of $f$ is given. Write the equation for the graph obtained from the graph of $f$ by shrinking vertically by a factor of 3.
+    Back: |
+      $$
+      y = \frac{1}{3} f(x)
+      $$
