--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -74,3 +74,83 @@ notes:
       $$
       y = \frac{1}{3} f(x)
       $$
+- id: 1542483084044
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.3 03: Match each equation with its graph, and give reasons for your choices.
+      a. $y = f(x-4)$
+      b. $y = f(x) + 3$
+      c. $y = \frac{1}{3}f(x)$
+      d. $y = -f(x+4)$
+      e. $y = 2f(x+6)$
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+      from matplotlib import style
+      import math
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      def f(x):
+        # Starting with the graph of $f$ from the text, which looks like a
+        # parabola with max 3, gives $f(x) = a(x-b)^2+3$ with $a$ and $b$
+        # to be solved such that $f(0) = 1$, and $f(3) = 0$; this gives:
+        #   f(0) = a*b**2 + 3 == 1,
+        #   whence
+        #     b**2 = -2/a,
+        #   and
+        #     b = math.sqrt(-2/a),
+        # and
+        #   f(3) = a(3-b)**2 + 3 == 9*a - 6*a*b + a*b**2 + 3 == 0.
+        # Substituting $b$ and setting
+        #   c = -math.sqrt(-a)
+        # gives
+        #   -9*c**2 + 6*math.sqrt(2)*c + 1 == 0.
+        # Solve for $c$ using the quadratic formula, then solve for $a$ using # $c$, then solve for $b$ using $a$.
+
+        A = -9
+        B = 6*math.sqrt(2)
+        C = 1
+        c = (-B - math.sqrt(B**2 - 4*A*C))/(2*A)
+        a = -c**2
+        b = math.sqrt(-2/a)
+        return a*(x-b)**2 + 3
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        (f(x), (x, 0, 3)),
+        (f(x-4), (x, 0+4, 3+4)),
+        (f(x)+3, (x, 0, 3)),
+        (f(x)/3, (x, 0, 3)),
+        (-f(x+4), (x, 0-4, 3-4)),
+        (2*f(x+6), (x, 0-6, 3-6)),
+        xlim = (-8,9),
+        ylim = (-4,7),
+        xlabel = '$x$',
+        ylabel = '$y$',
+        show = False,
+      )
+      p[0].line_color = 'r'
+
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.text(1.2, 3.25, '$f$')
+      ax.text(5.2, 3.25, '3')
+      ax.text(1.2, 6.25, '1')
+      ax.text(1.2, 1.25, '4')
+      ax.text(1.2-4, -3.65, '5')
+      ax.text(1.2-6, 6.25, '2')
+
+      p._backend.show()
+      ```
+    Back: |
+      a. 3; $f(x-4)$ translates $f$ 4 units rightward.
+      b. 1; $f(x)+3$ translates $f$ 3 units upward.
+      c. 4; $\frac{1}{3}f(x)$ shrinks $f$ vertically by a factor of 3.
+      d. 5; $-f(x+4)$ translates $f$ 4 units leftward and reflects $f$ about the $x$ axis.
+      3. 2; $2f(x+6)$ translates $f$ 6 units leftward and stretches $f$ vertically by a factor of 2.
