--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -381,3 +381,35 @@ notes:
       $$
       y = -\sqrt{-x^2 - 5x - 4} - 1
       $$
+- id: 1542517339370
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.3 09: Graph the function $y=-x^3$ by hand, not by plotting points, but by starting with the graph of one of the standard functions given in section 1.2 of CCAC, and then applying appropriate transformations.
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        -x**3,
+        xlim = (-6,6),
+        ylim = (-4,4),
+        xlabel = '$x$',
+        ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.text(0.5, 1.0, '$y = -x^3$')
+
+      p._backend.show()
+      ```
