--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -445,3 +445,37 @@ notes:
 
       p._backend.show()
       ```
+- id: 1542517339594
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.3 13: Graph the function $y=1+2\cos{x}$ by hand, not by plotting points, but by starting with the graph of one of the standard functions given in section 1.2 of CCAC, and then applying appropriate transformations.
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        1 + 2*sy.cos(x),
+        xlim = (-6,6),
+        ylim = (-3,5),
+        xlabel = '$x$',
+        ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.text(2.0, 1.0, '$y = 1 + 2\cos{x}$')
+      ax.text(sy.pi-0.1, -0.5, '$\pi$')
+      ax.text(-sy.pi-0.4, -0.5, '$-\pi$')
+
+      p._backend.show()
+      ```
