--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -513,3 +513,35 @@ notes:
 
       p._backend.show()
       ```
+- id: 1542517339793
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.3 17: Graph the function $y=\sqrt{x+3}$ by hand, not by plotting points, but by starting with the graph of one of the standard functions given in section 1.2 of CCAC, and then applying appropriate transformations.
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        sy.sqrt(x + 3),
+        xlim = (-3, 3),
+        ylim = (-1, 3),
+        xlabel = '$x$',
+        ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.text(2.0, 1.5, '$y = \sqrt{x + 3}$')
+
+      p._backend.show()
+      ```
