--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -545,3 +545,35 @@ notes:
 
       p._backend.show()
       ```
+- id: 1542517339929
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.3 19: Graph the function $y=\frac{1}{2}(x^2+8x)$ by hand, not by plotting points, but by starting with the graph of one of the standard functions given in section 1.2 of CCAC, and then applying appropriate transformations.
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        (x**2 + 8*x)/2,
+        xlim = (-12, 12),
+        ylim = (-9, 7),
+        xlabel = '$x$',
+        ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.text(2.0, 1.5, '$y = \\frac{1}{2}(x^2 + 8x)$')
+
+      p._backend.show()
+      ```
