--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -610,3 +610,37 @@ notes:
 
       p._backend.show()
       ```
+- id: 1542517340153
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.3 23: Graph the function $y=|\sqrt{x}-1|$ by hand, not by plotting points, but by starting with the graph of one of the standard functions given in section 1.2 of CCAC, and then applying appropriate transformations.
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+      import math
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        (-(sy.sqrt(x) - 1), (x, 0, 1)),
+        ((sy.sqrt(x) - 1), (x, 1, 5)),
+        xlim = (-1, 4.5),
+        ylim = (-1, 2),
+        xlabel = '$x$',
+        ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.text(1.0, 1.0, '$y = |\\sqrt{x} - 1|$')
+
+      p._backend.show()
+      ```
