--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -650,3 +650,38 @@ notes:
       CCAC 01.3 27a: How is the graph of $y=f(|x|)$ related to the graph of $f$?
     Back: |
       The portion of the graph of $y = f(x)$ to the right of the $y$-axis is reflected about the $y$-axis.
+- id: 1542517737494
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.3 27b: Sketch the graph of $y=\sin{|x|}$.
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+      import numpy as np
+      import math
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        (sy.sin(-x), (x, -8, 0)),
+        (sy.sin(x), (x, 0, 8)),
+        xlim = (-7.5, 7.5),
+        ylim = (-5, 5),
+        xlabel = '$x$',
+        ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.text(1.5, 1.5, '$y = \\sin{|x|}$')
+
+      p._backend.show()
+      ```
