--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -720,3 +720,15 @@ notes:
 
       p._backend.show()
       ```
+- id: 1542653617595
+  fields:
+    Front: |
+      CCAC 01.3 29: Find (a) $f+g$, (b) $f-g$, (c) $fg$, and (d) $f/g$, and state their domains.
+      $$
+      f(x) = x^3 + 2x^2, \ g(x) = 3x^2 - 1
+      $$
+    Back: |
+      a. $(f + g)(x) = x^3 + 5x^2 - 1, \ (-\infty, \infty)$
+      b. $(f - g)(x) = x^3 - x^2 + 1, \ (-\infty, \infty)$
+      c. $(fg)(x) = 3x^5 + 6x^4 - x^3 - 2x^2, \ (-\infty, \infty)$
+      d. $(f/g)(x) = \frac{x^3 + 2x^2}{3x^2 - 1}, \ \{x | x \ne \pm 1/\sqrt{3}\}$
